# project-x-on-chain

./: Anchor.toml  README.adoc  package-lock.json  package.json
lib/: Cargo.toml
programs/wen_dev_program/: Cargo.toml
programs/wen_dev_program/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/wen_dev_program/src/instructions/: configure.rs  launch.rs  migrate.rs  mod.rs  snipe.rs
tests/: wen_dev_program.ts
